# paczka_pip

./: Kopia_notatnika_classes.ipynb  LICENSE  MANIFEST.in  Readme.rst  setup.cfg  setup.py
homework_exercise.egg-info/: PKG-INFO  SOURCES.txt
