[metadata]
name = homework_exercise
description = Sample package for homework.
authors = Grzegorz Bokota, Zofia Hendrysiak
author_email = z.hendrysiak@student.uw.edu.pl
licence = BSD-3-Clause
version = 0.01
install_requires = ["numpy","json","os", "toml"]

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
